# eodag

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
eodc_eodag/: eodag_query.py  maap_access.py  steps.py  utils.py
eodc_eodag/collections/: cds_access.py  cop_dataspace_s3.py  earthdata_access.py  maap_access.py
