[tool.poetry]
name = "eodc-eodag"
version = "1.0.8"
description = "Create Docker image with dependencies for eodag data access. "
authors = ["ValentinaHutter <valentina.hutter@eodc.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.42.92"
requests = "^2.33.1"
botocore = "^1.42.94"
pandas = "^3.0.2"
eodag = "^4.1.0"
tqdm = "^4.67.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"